--- a/VortexCommander.css
+++ b/VortexCommander.css
@@ -20,18 +20,29 @@ body,
     left:5px;
 }
 
-.panel_control_rangers #botonera_ranger .boton_en_mapa{
+.boton_redondo_flotante{
     display:inline-block;
     border-radius:35px;
-}
-
-.panel_control_rangers #botonera_ranger .boton_en_mapa .imagen_boton{
     height:70px;
 }
 
-.panel_control_rangers #botonera_ranger .boton_en_mapa:hover{
+.boton_redondo_flotante:hover{
     -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1);
     box-shadow: 0 0 16px rgba(66, 140, 240, 1);
+}
+
+.boton_redondo_flotante .imagen_boton{
+    height:70px;
+}
+
+.boton_redondo_flotante_prendido{
+    -webkit-box-shadow: 0 0 16px rgba(255, 0, 0, 1);
+    box-shadow: 0 0 16px rgba(255, 0, 0, 1);
+}
+
+.boton_redondo_flotante_apagado{
+    -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 1);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 1);
 }
 
 /*make sure the viewport is 100% height*/
