--- a/VortexCommander.css
+++ b/VortexCommander.css
@@ -13,32 +13,29 @@ body,
 /*make sure the viewport is 100% height*/
 html, body {
     height : 100%;
+    margin:0px;
 }
 
 /*make the page element 100% height*/
-#pantalla_panel_control_rangers {
+.panel_control_rangers {
     height : 100%;
+    width : 100%;
+    position:relative;
 }
 
-/*specify a height for the header so we can line-up the elements, the default is 40px*/
-#pantalla_panel_control_rangers .ui-header {
-    height : 40px;
-}
-
-/*set the content to be full-width and height except it doesn't overlap the header or footer*/
-#pantalla_panel_control_rangers .ui-content {
+.panel_control_rangers #div_mapa{
     position : absolute;
-    top      : 40px;
-    right    : 0;
-    bottom   : 30px;
-    left     : 0;
+    top      : 0px;
+    right    : 0px;
+    bottom   : 0px;
+    left     : 0px;
 }
 
-/*absolutely position the footer to the bottom of the page*/
-#pantalla_panel_control_rangers .ui-footer {
+.panel_control_rangers #layer_commander{
     position : absolute;
-    bottom   : 0;
-    left     : 0;
-    width    : 100%;
-    height   : 30px;
+    top      : 0px;
+    right    : 0px;
+    bottom   : 0px;
+    left     : 0px;
+    pointer-events: none;
 }
