--- a/VortexCommander.css
+++ b/VortexCommander.css
@@ -67,5 +67,5 @@ html, body {
     right    : 0px;
     bottom   : 0px;
     left     : 0px;
-    pointer-events: none;
+    /*pointer-events: none;*/
 }
