--- a/VortexCommander.css
+++ b/VortexCommander.css
@@ -67,5 +67,7 @@ html, body {
     right    : 0px;
     bottom   : 0px;
     left     : 0px;
+    width    : 100%;
+    height   : 100%;
     /*pointer-events: none;*/
 }
